--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"bulma": "^0.9.4",
 		"firebase": "^9.20.0",
+		"svelte-routing": "^1.6.0",
 		"svelte-spa-router": "^3.3.0"
 	}
 }
